# willow-inference-server-rs

./: .gitignore  Cargo.toml  Containerfile  README.md  build.rs
.github/workflows/: ci.yml
src/: hf.rs  lib.rs  main.rs  router.rs  state.rs  stt.rs  trace.rs  tts.rs
src/inference/: mod.rs  stt.rs  tts.rs
src/routes/api/: mod.rs  tts.rs  willow.rs
src/ui/: handlers.rs  templates.rs
src/util/: audio.rs  http.rs  mod.rs
templates/: about.html  base.html
tests/: router_tests.rs
tests/assets/: whats_the_time.pcm
