[package]
name = "wis-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.8", features = ["http2"] }
futures-util = "0.3.31"
hf-hub = { version = "0.4.3", default-features = false, features = ["rustls-tls", "tokio"] }
ort = { git = "https://github.com/pykeio/ort", rev = "15bd15cb3e16a6cfa41182fa8ebf468e5eee204e", version = "2.0.0-rc.10", default-features = false, features = ["copy-dylibs", "download-binaries", "ndarray", "std", "tls-rustls", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
serde_json = "1.0.148"
tower = "0.5.2"
