[package]
name = "wis-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.8", features = ["http2"] }
futures-util = "0.3.31"
hf-hub = { version = "0.4.3", default-features = false, features = ["rustls-tls", "tokio"] }
hound = "3.5.1"
mimalloc = "0.1.48"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["copy-dylibs", "download-binaries", "ndarray", "std", "tls-rustls", "tracing"] }
parakeet-rs = { version = "0.2.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sherpa-rs = { version = "0.6.8", default-features = false, features = ["tts"] }
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
serde_json = "1.0.148"
tower = "0.5.2"

[build-dependencies]
ureq = { version = "3.1.4", features = ["platform-verifier"] }
